Made a Map class among other things to better encapsulate and organize all of the necessary map data.